# altreach

./: .env.example  .gitignore  Cargo.toml  README.md
altreach-client/: Cargo.toml
altreach-client/src/: client.rs  display.rs  input.rs  main.rs
altreach-proto/: Cargo.toml
altreach-proto/src/: lib.rs
altreach-server/: Cargo.toml
altreach-server/src/: capture.rs  clipboard.rs  encoder.rs  input.rs  main.rs  server.rs
