[package]
name = "altreach-client"
version = "0.1.0"
edition = "2021"
# This crate runs on Mac (and any other platform).
# No Windows-specific code here.

[dependencies]
altreach-proto = { path = "../altreach-proto" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
