[package]
name = "altreach-server"
version = "0.1.0"
edition = "2021"
# This crate is Windows-only — screen capture and input injection
# both use Windows-specific APIs.

[dependencies]
altreach-proto = { path = "../altreach-proto" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
zstd = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
